Inicializando portafolio desde cero con estructura base

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+ HEAD
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marilyn Ponzón - IA aplicada a Salud</title>
@@ -49,5 +50,115 @@
     </section>
 
     <script src="script.js"></script>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Marilyn Ponzón - IA aplicada a Salud</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- Navigation -->
+  <nav class="navbar" id="navbar">
+    <div class="nav-container">
+      <a href="#inicio" class="logo">Marilyn Ponzón</a>
+      <ul class="nav-menu" id="nav-menu">
+        <li><a href="#inicio" class="nav-link active">Inicio</a></li>
+        <li><a href="#sobre-mi" class="nav-link">Sobre Mí</a></li>
+        <li><a href="#servicios" class="nav-link">Servicios</a></li>
+        <li><a href="#proyectos" class="nav-link">Proyectos</a></li>
+        <li><a href="#contacto" class="nav-link">Contacto</a></li>
+      </ul>
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Particles Background -->
+  <div class="particles" id="particles"></div>
+
+  <!-- Hero Section -->
+  <section id="inicio" class="hero-section content-section active">
+    <h1 class="main-title">Marilyn Ponzón I IA<br>aplicada a Salud</h1>
+    <div class="network-container">
+      <div class="ai-center">
+        <div class="ai-text">AI</div>
+        <div class="system-text">SYSTEM</div>
+      </div>
+      <div class="node"></div>
+      <div class="node"></div>
+      <div class="node"></div>
+      <div class="node"></div>
+      <div class="node"></div>
+      <div class="node"></div>
+      <div class="node"></div>
+      <div class="node"></div>
+      <div class="connection"></div>
+      <div class="connection"></div>
+      <div class="connection"></div>
+      <div class="connection"></div>
+      <div class="connection"></div>
+      <div class="connection"></div>
+      <div class="connection"></div>
+      <div class="connection"></div>
+    </div>
+    <div class="subtitle">
+      <span class="bulb-icon">💡</span>
+      Inteligencia Artificial y Consultoría en Salud
+    </div>
+    <div class="cta-buttons">
+      <a href="#servicios" class="cta-button cta-primary">Ver Servicios</a>
+      <a href="#contacto" class="cta-button cta-secondary">Contactar</a>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="sobre-mi" class="content-section">
+    <h2 class="section-title">Sobre Mí</h2>
+    <div class="section-content">
+      <p>Especialista en Inteligencia Artificial aplicada al sector salud con experiencia en el desarrollo de soluciones innovadoras que transforman la atención médica y mejoran los resultados para pacientes y profesionales de la salud.</p>
+      <br>
+      <p>Mi enfoque se centra en la implementación de tecnologías de IA ética y responsable que optimicen procesos clínicos, faciliten el diagnóstico médico y mejoren la eficiencia operacional en organizaciones de salud.</p>
+    </div>
+  </section>
+
+  <!-- Services Section -->
+  <section id="servicios" class="content-section">
+    <h2 class="section-title">Servicios</h2>
+    <div class="section-content">
+      <p><strong>Consultoría en IA para Salud:</strong> Estrategias personalizadas para implementar inteligencia artificial en tu organización de salud.</p>
+      <br>
+      <p><strong>Desarrollo de Soluciones:</strong> Creación de herramientas de IA para diagnóstico, análisis predictivo y optimización de procesos clínicos.</p>
+      <br>
+      <p><strong>Capacitación y Formación:</strong> Programas de entrenamiento para equipos médicos en el uso de tecnologías de IA.</p>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="proyectos" class="content-section">
+    <h2 class="section-title">Proyectos</h2>
+    <div class="section-content">
+      <p>Desarrollo de sistemas de inteligencia artificial para mejorar la precisión diagnóstica, optimizar flujos de trabajo hospitalarios y crear herramientas de apoyo a la decisión clínica.</p>
+      <br>
+      <p>Implementación de modelos de machine learning para análisis predictivo en salud pública y desarrollo de interfaces intuitivas para profesionales médicos.</p>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contacto" class="content-section">
+    <h2 class="section-title">Contacto</h2>
+    <div class="section-content">
+      <p>¿Interesado en transformar tu organización de salud con inteligencia artificial?</p>
+      <br>
+      <p><strong>Email:</strong> marilyn.ponzon@email.com</p>
+      <p><strong>LinkedIn:</strong> /in/marilyn-ponzon</p>
+      <p><strong>Ubicación:</strong> Disponible para proyectos remotos y presenciales</p>
+    </div>
+  </section>
+
+  <script src="script.js"></script>
+ da3dcba (Inicializando portafolio desde cero con estructura base)
 </body>
 </html>
