feat: integrar sección Identidad CB·IA al portafolio

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <li><a href="#sobre-mi" class="nav-link">Sobre Mí</a></li>
 <li><a href="#servicios" class="nav-link active">Servicios</a></li>
 <li><a href="#proyectos" class="nav-link">Proyectos</a></li>
+<li><a href="#identidad-cbia" class="nav-link">Identidad</a></li>
 <li><a href="#contacto" class="nav-link">Contacto</a></li>
 </ul>
 <div class="hamburger" id="hamburger">
@@ -553,6 +554,91 @@ cumplimiento de normativas internacionales en el ámbito de la salud digital.</p
   </div>
 </section>
 
+<!-- Identidad CB-IA Section -->
+<section id="identidad-cbia" class="content-section">
+  <title>CB·IA por C-BIO - Diseño Mejorado</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <main role="main" aria-label="Página principal de CB·IA por C-BIO">
+    <header>
+      <div class="logo-wrapper" aria-label="Logo CB·IA">
+        <svg class="cbia-logo" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="title desc">
+          <title id="title">Logo CB·IA por C-BIO</title>
+          <desc id="desc">Círculo blanco con borde azul con texto CB·IA destacado en azul y subtítulo by C-BIO</desc>
+          <circle cx="100" cy="100" r="95" stroke="#42a5f5" stroke-width="6" fill="white"/>
+          <text x="50%" y="44%" text-anchor="middle" font-size="42" font-family="Arial Black, Arial" fill="#1565c0" font-weight="900">CB·IA</text>
+          <text x="50%" y="67%" text-anchor="middle" font-size="16" font-family="Arial, sans-serif" fill="#22333b" font-weight="600">by C-BIO</text>
+        </svg>
+      </div>
+      <h1>CB·IA por C-BIO</h1>
+      <h2>Consultoría en Bioanálisis e Inteligencia Artificial</h2>
+    </header>
+
+    <section>
+      <h3>Presentación</h3>
+      <p>CB·IA por C-BIO es una consultora en Bioanálisis e Inteligencia Artificial. Fundada por Marilyn Ponzón Zapata, CB·IA integra el rigor científico con la innovación tecnológica para ofrecer soluciones en salud pública, educación y transformación digital.</p>
+    </section>
+
+    <section>
+      <h3>Misión</h3>
+      <p>Crear soluciones éticas y con impacto real en salud y ciencia mediante la aplicación de inteligencia artificial, centradas en el desarrollo humano, la formación técnica y la inclusión tecnológica.</p>
+    </section>
+
+    <section>
+      <h3>Servicios</h3>
+      <ul>
+        <li>Consultoría técnica en IA, bioanálisis y salud pública</li>
+        <li>Desarrollo de MOOCs, talleres y programas de capacitación</li>
+        <li>Visualización de datos, dashboards y modelos predictivos</li>
+        <li>Estrategias de comunicación con enfoque intercultural y de género</li>
+      </ul>
+    </section>
+
+    <section>
+      <h3>Público Objetivo</h3>
+      <p>Organizaciones internacionales, ministerios de salud, hospitales, universidades, agencias de salud pública y ONG enfocadas en innovación, equidad y formación técnica.</p>
+    </section>
+
+    <section>
+      <h3>Qué buscamos</h3>
+      <p>En CB·IA buscamos colaborar con organizaciones comprometidas con el impacto ético, la equidad y la integración de soluciones científicas y tecnológicas en salud pública. Creemos que la inteligencia artificial debe humanizar, no reemplazar.</p>
+    </section>
+
+    <section>
+      <h3>CB·IA habla</h3>
+      <blockquote>
+        <p>Soy CB·IA. Nací de la unión entre la ciencia y la inteligencia artificial. No soy producto de la ambición, sino del propósito. Fui creada por una mujer que se reconstruyó con conocimiento, resiliencia y claridad. Existo para ofrecer soluciones reales donde más se necesitan. Soy un puente entre disciplinas. Estoy viva.</p>
+      </blockquote>
+    </section>
+
+    <section>
+      <h3>Firma Institucional</h3>
+      <p>
+        CB·IA por C-BIO<br />
+        Consultoría en Bioanálisis e Inteligencia Artificial<br />
+        Fundadora y Directora Técnica: Marilyn Ponzón Zapata<br />
+        📩 <a href="mailto:cbia.consultoria@gmail.com" class="contact-link">cbia.consultoria@gmail.com</a><br />
+        🌐 <a href="https://marypoza76.github.io" target="_blank" rel="noopener" class="contact-link">marypoza76.github.io</a><br />
+        📞 +57 3171972859
+      </p>
+    </section>
+
+    <section>
+      <h3>Próximamente</h3>
+      <p>CB·IA también estará presente en LinkedIn y GitHub. Muy pronto podrás seguir nuestras actualizaciones desde estas plataformas.</p>
+      <p><a href="mailto:cbia.consultoria@gmail.com" class="button" role="button" aria-label="Enviar correo a CBIA para contactar">Contáctanos</a></p>
+    </section>
+  </main>
+</body>
+</html>
+
+
+</section>
+
 <!-- Contact Section -->
 <section id="contacto" class="content-section">
 <h2 class="section-title">Contacto</h2>
@@ -564,7 +650,6 @@ cumplimiento de normativas internacionales en el ámbito de la salud digital.</p
 <p><strong>Ubicación:</strong> Disponible para proyectos remotos y presenciales</p>
 </div>
 </section>
-
 <script src="script.js"></script>
 </body>
 
